--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goldtown",
+  "name": "GRgroup",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,11 @@
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+    "sass": "^1.44.0",
+    "sass-loader": "^10.2.0",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0"
   },
   "devDependencies": {}
 }
