--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sass": "^1.44.0",
     "sass-loader": "^10.2.0",
     "pug": "^3.0.2",
-    "pug-plain-loader": "^1.1.0"
+    "pug-plain-loader": "^1.1.0",
+    "@nuxtjs/axios": "^5.13.6"
   },
   "devDependencies": {}
 }
