--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GRgroup",
+  "name": "GoldTown",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,18 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "@vuesimple/vs-pagination": "^1.4.4",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
+    "sass": "^1.44.0",
+    "sass-loader": "^10.2.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0",
-    "sass": "^1.44.0",
-    "sass-loader": "^10.2.0",
-    "pug": "^3.0.2",
-    "pug-plain-loader": "^1.1.0",
-    "@nuxtjs/axios": "^5.13.6"
+    "webpack": "^4.46.0"
   },
   "devDependencies": {}
 }
