--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+    "nuxt-i18n": "^6.13.12"
   },
   "devDependencies": {}
 }
