--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+    "@nuxtjs/sitemap": "^2.4.0"
   },
   "devDependencies": {}
 }
