--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0",
-    "@nuxtjs/sitemap": "^2.4.0"
+    "@nuxtjs/sitemap": "^2.4.0",
+    "@nuxtjs/redirect-module": "^0.3.1"
   },
   "devDependencies": {}
 }
