--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/gtm": "^2.4.0",
+    "@nuxtjs/redirect-module": "^0.3.1",
+    "@nuxtjs/sitemap": "^2.4.0",
     "@vuesimple/vs-pagination": "^1.4.4",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "nuxt-facebook-pixel-module": "^1.5.0",
     "nuxt-i18n": "^6.13.12",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
@@ -23,9 +26,7 @@
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0",
-    "@nuxtjs/sitemap": "^2.4.0",
-    "@nuxtjs/redirect-module": "^0.3.1"
+    "webpack": "^4.46.0"
   },
   "devDependencies": {}
 }
